# tinysh

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  key  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: build.yml
config/: buildroot.mipsel  buildroot.x86  busybox-1.20.x.config  sources.list
docs/images/: control-flow.drawio
scripts/: bloat.sh  build.sh  build_remote_all_arches.sh  buildall.sh  docker.sh  run_debug.sh  run_qemu.sh  supported_arches.sh
src/: auxv.rs  kex.rs  main.rs  relay.rs  tshl.rs  tshr.rs  util.rs
